## SUDOKU with a SFML GUI

## Semantic versioning
set(CMAKE_MAJOR_VERSION 1)
set(CMAKE_MINOR_VERSION 0)
set(CMAKE_PATCH_VERSION 0)
set(PROJECT_VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION})


project(${PROJECT_NAME} VERSION ${PROJECT_VERSION} LANGUAGES CXX)
cmake_minimum_required(VERSION 3.23.2)
set(PROJECT_NAME "Sudoku")


# Set compiler flags
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(Sudoku)

